--- a/package.json
+++ b/package.json
@@ -31,9 +31,14 @@
   "license": "MIT",
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
+    "@types/dompurify": "^3.0.5",
+    "@types/jsdom": "^21.1.7",
+    "chalk": "^5.4.1",
     "commander": "^11.1.0",
+    "dompurify": "^3.2.5",
     "dotenv": "^16.3.1",
     "glob": "^10.3.10",
+    "jsdom": "^26.0.0",
     "markdown-it": "^13.0.2"
   },
   "devDependencies": {
