Add Jest tests for API connections, file system utilities, rate limiting, content sanitization, token counting, and path validation
- Implemented tests for Google Gemini and OpenRouter API connections to verify API keys and responses.
- Created comprehensive file system utility tests covering file existence checks, directory management, and file read/write operations.
- Added rate limiter tests to ensure proper request handling and token acquisition.
- Developed content sanitization tests to prevent XSS attacks and validate filename sanitization.
- Included token counting tests for estimating token usage and formatting costs.
- Added path validation tests to prevent path traversal attacks and ensure paths are within a specified base directory.
- Introduced a command-line script to run API connection tests.
- Configured Jest with TypeScript support and set up test environment.

--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,25 @@ CODE_REVIEW_GOOGLE_API_KEY=your_google_api_key_here
 # Get your key from https://openrouter.ai/
 CODE_REVIEW_OPENROUTER_API_KEY=your_openrouter_api_key_here
 
-# Model configuration (required if using the respective API)
-# For Google Gemini models, specify the model name
-CODE_REVIEW_GEMINI_MODEL=gemini-1.5-pro
+# Model configuration
+# Specify which model to use for code reviews using the format adapter:model
 
-# For OpenRouter models, specify the model name without the 'openrouter-' prefix
-CODE_REVIEW_OPENROUTER_MODEL=anthropic/claude-3-opus
+# Default model
+CODE_REVIEW_MODEL=gemini:gemini-1.5-pro
+
+# Supported Gemini models:
+# gemini:gemini-1.5-pro         - Recommended for most code reviews
+# gemini:gemini-1.5-flash       - Faster but less detailed reviews
+# gemini:gemini-2.5-pro         - Latest model with improved capabilities
+# gemini:gemini-2.0-flash       - Balanced performance and quality
+# gemini:gemini-pro             - Legacy model
+# gemini:gemini-pro-latest      - Latest version of legacy model
+
+# Supported OpenRouter models:
+# openrouter:anthropic/claude-3-opus     - Highest quality, most detailed reviews
+# openrouter:anthropic/claude-3-sonnet   - Good balance of quality and speed
+# openrouter:openai/gpt-4-turbo          - Strong performance on complex code
+# openrouter:openai/gpt-4o               - Latest OpenAI model
+# openrouter:deepseek/deepseek-v3        - Excellent for code analysis and refactoring
+# openrouter:anthropic/claude-2.1        - Reliable performance
+# openrouter:google/gemini-pro           - Google's model via OpenRouter
