--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "description": "A TypeScript-based tool for automated code reviews using Google's Gemini AI models",
   "main": "dist/index.js",
   "bin": {
-    "ai-review": "./dist/index.js"
+    "ai-code-review": "./dist/index.js"
   },
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "review": "ts-node src/index.ts",
+    "code-review": "ts-node src/index.ts",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --collectCoverageFrom='src/utils/**/*.ts'",
     "test:model": "ts-node src/test-model.ts",
     "list:models": "ts-node src/list-models.ts",
     "test:latest": "ts-node src/test-latest.ts",
+    "test:api": "ts-node src/test-api-connections.ts",
     "prepare-package": "./scripts/prepare-package.sh",
     "prepublishOnly": "npm run build"
   },
@@ -47,19 +49,24 @@
     "dotenv": "^16.3.1",
     "glob": "^10.3.10",
     "jsdom": "^26.0.0",
-    "markdown-it": "^13.0.2"
+    "markdown-it": "^13.0.2",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
+    "@types/jest": "^29.5.14",
     "@types/jsdom": "^21.1.7",
     "@types/markdown-it": "^13.0.7",
     "@types/node": "^20.10.5",
+    "@types/node-fetch": "^2.6.12",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "jest": "^29.7.0",
     "prettier": "^3.1.1",
+    "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vitest": "^1.0.4"
