--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "jsdom": "^26.0.0",
     "markdown-it": "^13.0.2",
     "node-fetch": "^2.7.0",
-    "yargs": "^17.7.2"
+    "yargs": "^17.7.2",
+    "zod": "^3.24.2"
   },
   "peerDependencies": {
     "react": "*"
