Add comprehensive Ruby/Rails code review prompts for architectural, performance, security, and unused code analysis
- Introduced architectural review prompt to evaluate Ruby/Rails code architecture, focusing on best practices and design patterns.
- Added performance review prompt to identify performance bottlenecks and suggest optimizations in Ruby/Rails applications.
- Created security review prompt to assess Ruby/Rails code for vulnerabilities and recommend fixes.
- Developed unused code review prompt to identify and safely remove dead code in Ruby/Rails projects.
- Implemented quick fixes review prompt to highlight easy improvements in Ruby/Rails code for better readability and performance.
- Established code tracing unused code review prompt for deep analysis of Ruby/Rails projects to find unused code with high confidence.
- Added test projects with example Ruby on Rails application structure, including models, controllers, routes, and migrations.
- Included JSON and Markdown output formats for review results.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@bobmatnyc/ai-code-review",
-  "version": "2.1.1",
+  "version": "2.1.3",
   "description": "A TypeScript-based tool for automated code reviews using AI models from Google Gemini, Anthropic Claude, and OpenRouter",
   "main": "dist/index.js",
-  "bin": {
-    "ai-code-review": "dist/index.js"
-  },
+  "bin": "dist/index.js",
   "scripts": {
     "build": "npm run test && tsc",
     "postbuild": "./scripts/link-global.sh",
